[gd_scene load_steps=13 format=2]

[ext_resource path="res://mesa.png" type="Texture" id=1]
[ext_resource path="res://ec77162afc4bc3ec5ada07ffa5118027.png" type="Texture" id=2]
[ext_resource path="res://2.png" type="Texture" id=3]
[ext_resource path="res://1.png" type="Texture" id=4]
[ext_resource path="res://99.png" type="Texture" id=5]
[ext_resource path="res://main.gd" type="Script" id=6]
[ext_resource path="res://9.png" type="Texture" id=7]
[ext_resource path="res://5.png" type="Texture" id=8]
[ext_resource path="res://10.png" type="Texture" id=9]
[ext_resource path="res://11.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 99.25, 6.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46.7169, 21.2762 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Mesa" type="Sprite" parent="StaticBody2D"]
position = Vector2( 512, 260 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
polygon = PoolVector2Array( 290, 305, 432, 308, 722, 302, 728, 306, 732, 314, 702, 322, 590, 348, 461, 351, 386, 328, 336, 325, 295, 325, 287, 316 )

[node name="Ec77162Afc4Bc3Ec5Ada07Ffa5118027" type="Sprite" parent="."]
position = Vector2( 514, 148 )
scale = Vector2( 0.584375, 0.65625 )
texture = ExtResource( 2 )

[node name="b" type="StaticBody2D" parent="."]
position = Vector2( 409, 296 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="b"]
position = Vector2( 100.75, 0.5 )
shape = SubResource( 1 )

[node name="1" type="Sprite" parent="b"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 190, -75 )

[node name="j" type="Area2D" parent="b"]
position = Vector2( 21.9999, -74 )
rotation = 0.621337
scale = Vector2( 0.474359, 0.826531 )
collision_layer = 2
collision_mask = 2

[node name="5" type="Sprite" parent="b/j"]
texture = ExtResource( 8 )
offset = Vector2( 36.4473, 34.2062 )
region_enabled = true
region_rect = Rect2( 162.25, 6.25, 156, 98 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="b/j"]
position = Vector2( 31.8759, 34.3702 )
rotation = 0.74002
shape = SubResource( 2 )

[node name="6" type="Sprite" parent="b"]
position = Vector2( 177, -77 )
rotation = 0.621337
scale = Vector2( 0.474359, 0.826531 )
texture = ExtResource( 8 )
offset = Vector2( 36.4473, 34.2062 )
region_enabled = true
region_rect = Rect2( 162.25, 6.25, 156, 98 )

[node name="2" type="Sprite" parent="."]
position = Vector2( 502, 290 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="cima" type="TextureButton" parent="."]
margin_left = 754.0
margin_top = 135.0
margin_right = 818.0
margin_bottom = 199.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="baixo" type="TextureButton" parent="."]
margin_left = 818.0
margin_top = 269.0
margin_right = 882.0
margin_bottom = 333.0
rect_rotation = 180.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 802.0
margin_top = 190.0
margin_right = 860.0
margin_bottom = 214.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -50.0
margin_top = -129.0
margin_right = 462.0
margin_bottom = 383.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="11" type="Sprite" parent="."]
position = Vector2( 680, 309 )
scale = Vector2( 0.367188, 0.434082 )
texture = ExtResource( 10 )

[node name="start" type="TextureButton" parent="."]
margin_left = 864.0
margin_top = 171.0
margin_right = 896.0
margin_bottom = 203.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 937.0
margin_top = 12.0
margin_right = 1014.0
margin_bottom = 32.0
text = "Conclus√£o"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 186.0
margin_top = 358.361
margin_right = 859.0
margin_bottom = 508.361

[node name="Label" type="Label" parent="Button2"]
margin_left = 34.0
margin_top = 15.0
margin_right = 652.0
margin_bottom = 145.139
text = "
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tempo" type="Label" parent="."]
margin_left = 636.0
margin_top = 268.0
margin_right = 701.0
margin_bottom = 299.0
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="VBoxContainer" parent="."]
visible = false
anchor_right = 0.581
margin_left = 89.0
margin_top = 83.0
margin_right = 227.415
margin_bottom = 247.0
size_flags_stretch_ratio = 0.51
custom_constants/separation = 18
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="u" type="Label" parent="C"]
margin_right = 138.0
margin_bottom = 14.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="C"]
margin_top = 32.0
margin_right = 138.0
margin_bottom = 46.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="C"]
margin_top = 64.0
margin_right = 138.0
margin_bottom = 78.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="b/j" to="." method="_on_StaticBody2D_body_entered"]
[connection signal="button_down" from="cima" to="." method="_on_cima_button_down"]
[connection signal="button_down" from="baixo" to="." method="_on_baixo_button_down"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_down" from="start" to="." method="_on_start_button_down"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="button_down" from="Button2" to="." method="_on_Button_button_down"]
